crates/tun-engine-macros/tests/compile_fail/non_pub_field.rs
use tun_engine_macros::freeze;

#[freeze]
pub struct Bad {
    pub a: u32,
    b: u32,
}

fn main() {}
